[package]
name = "corrosion"
version = "0.1.0"
edition = "2021"

[dependencies]
build-info = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
consul-client = { path = "../consul-client" }
corro-admin = { path = "../corro-admin" }
corro-agent = { path = "../corro-agent" }
corro-api-types = { path = "../corro-api-types" }
corro-client = { path = "../corro-client" }
corro-tpl = { path = "../corro-tpl" }
corro-types = { path = "../corro-types" }
crc32fast = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
hyper = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
notify = { version = "6.0.1", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = { version = "0.3.0", default-features = false }
once_cell = { workspace = true }
rusqlite = { workspace = true }
seahash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellwords = { version = "1" }
spawn = { path = "../spawn" }
sqlite3-restore = { path = "../sqlite3-restore" }
tempfile = { workspace = true }
tikv-jemallocator = "0.5"
time = { workspace = true }
tokio = { workspace = true }
tokio-metrics = { workspace = true }
tokio-serde = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-filter = { workspace = true }
tracing-subscriber = { workspace = true }
tripwire = { path = "../tripwire" }
uuid = { workspace = true }

[build-dependencies]
build-info-build = { workspace = true }

[dev-dependencies]
corro-tests = { path = "../corro-tests" }
