[package]
name = "rhai-tpl"
version = "0.1.0"
edition = "2021"

[dependencies]
rhai = { workspace = true }
logos = { version = "0.13.0" }
enquote = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }