[package]
name = "spawn"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
futures = { workspace = true }
pin-project-lite = { workspace = true }
parking_lot.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
