[package]
name = "sqlite-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = { workspace = true }
rusqlite = { workspace = true }
deadpool = { workspace = true }
metrics = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1"]

[dev-dependencies]
tempfile = { workspace = true }
eyre = { workspace = true }
corro-types = { path = "../corro-types" }
