[package]
name = "sqlite3-restore"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
nix = { version = "0.30", features = ["fs"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
tempfile = { workspace = true }