[package]
name = "tripwire"
version = "0.1.0-alpha.0"
description = "makes futures pre-emptible"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
futures = { workspace = true }
futures-util = { workspace = true }
pin-project-lite = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert2 = { workspace = true }
