[package]
name = "rust-load-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antithesis_sdk = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
hickory-resolver = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
tripwire = { path = "../../../crates/tripwire" }
corro-client = { path = "../../../crates/corro-client" }
corro-api-types = { path = "../../../crates/corro-api-types" }
eyre.workspace = true
tokio.workspace = true
rusqlite = { workspace = true }
uuid = { workspace = true }
